2011-06-13 CERDAN Yohann  <cerdanyohann@yahoo.fr>
    * Update documentation
	* Add PL language
2011-06-11 CERDAN Yohann  <cerdanyohann@yahoo.fr>
	* initial upload